--- a/main.html
+++ b/main.html
@@ -1,12 +1,28 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-<title>Accordion.js</title>
-</head>
-<body>
+   <head>
+      <title>Accordion.js</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+	   <script src="accordion.js"></script>
+	   <script src="tester.js"></script>
+   </head>
+   <body>
+      <div class = "row">
+         <div class = "col-sm-4"></div>
+         <div class = "col-sm-4" style = "text-align: center">
+            <h1>Welcome to Accordion.js</h1>
+            <hr>
+            <p>This is a library that uses a list of paths to make a tree-like accordion structure</p>
+         </div>
+         <div class = "col-sm-4"></div>
+      </div>
+	  <div class = "row">
+	     <div class = "col-sm-4"></div>
+         <div class = "col-sm-4">
+			<div id = "content"></div>
+		 </div>
+         <div class = "col-sm-4"></div>
+	  </div>
+   </body>
+</html>
 
-<h1>Welcome to Accordion.js</h1>
-<p>This is a library that uses a list of paths to make a tree-like accordion structure</p>
-
-</body>
-</html> 
