--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+	<meta charset="utf-8"/>
       <title>Accordion.js</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
 	   <script src="accordion.js"></script>
@@ -12,14 +13,17 @@
          <div class = "col-sm-4" style = "text-align: center">
             <h1>Welcome to Accordion.js</h1>
             <hr>
-            <p>This is a library that uses a list of paths to make a tree-like accordion structure</p>
+            <p>A library that uses a list of objects that have path attributes to make a tree-like accordion structure</p>
+			<hr>
          </div>
          <div class = "col-sm-4"></div>
       </div>
 	  <div class = "row">
 	     <div class = "col-sm-4"></div>
          <div class = "col-sm-4">
-			<div id = "content"></div>
+			<div id = "content">
+			<!-- content appends here -->
+			</div>
 		 </div>
          <div class = "col-sm-4"></div>
 	  </div>
