--- a/main.html
+++ b/main.html
@@ -4,11 +4,12 @@
 	<meta charset="utf-8"/>
       <title>Accordion.js</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-	   <script src="accordion.js"></script>
-	   <script src="tester.js"></script>
-   </head>
+		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="accordion.js"></script>
+		<script src="tester.js"></script>
+	</head>
    <body>
-      <div class = "row">
+      <div class = "row" style = "margin-top: 20px">
          <div class = "col-sm-4"></div>
          <div class = "col-sm-4" style = "text-align: center">
             <h1>Welcome to Accordion.js</h1>
