--- a/main.html
+++ b/main.html
@@ -3,8 +3,9 @@
    <head>
 	<meta charset="utf-8"/>
       <title>Accordion.js</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+	  	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="accordion.js"></script>
 		<script src="tester.js"></script>
 	</head>
