--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
       <title>Accordion.js</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="accordion.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="accordion.js"></script>
