Pass Parameters Through JSON Properties

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 	  <div class = "row">
 	     <div class = "col-sm-4"></div>
          <div class = "col-sm-4">
-			<div id = "content">
+			<div id = "accordion">
 			<!-- content appends here -->
 			</div>
 		 </div>
